// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show throw error should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-err 1`] = `Array []`;

exports[`show throw error should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-exit 1`] = `Array []`;

exports[`show throw error should change exit on error per subtask: HUHzWgxW8O1FGgEisITyBb2eDKzmyhUO-out 1`] = `
Array [
  Array [
    "◼ This task will execute and not quit on errors.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will execute and not quit on errors.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.

◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ◼ This is a subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ◼ This is a subtask.
  ◼ This is an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ◼ This is a subtask.
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ❯ This is a subtask.
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ This is a subtask.
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ◼ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ❯ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ This is an another subtask.
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ◼ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ❯ This is yet an another subtask.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ❯ I have succeeded.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G❯ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
✖ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
✖ I will exit on error since I am a direct child of parent task.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[1A[2K[1A[2K[1A[2K[G⚠ This task will execute and not quit on errors.
  ✖ I have failed [0]
  ✖ I have failed [1]
  ✔ I have succeeded.
✖ I will exit on error since I am a direct child of parent task. 
",
  ],
]
`;

exports[`show throw error should contain errors from failed tasks: H2KTg7q5F1kWMtrPFdOERVSZc3UT2IsM 1`] = `
Array [
  [ListrError: Error: I will exit on error since I am a direct child of parent task.],
  [ListrError: Task failed without crashing.],
]
`;

exports[`show throw error should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-err 1`] = `Array []`;

exports[`show throw error should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-exit 1`] = `Array []`;

exports[`show throw error should not throw out an error when exitonerror is disabled: OgQG0pbo8qgn5ZD8TLdlzM3HnnnYoozl-out 1`] = `
Array [
  Array [
    "◼ This task will fail.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will fail.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will fail.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task will fail.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
◼ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
❯ This task will execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
❯ I will change my title if this executes.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
✔ I will change my title if this executes.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
✔ I will change my title if this executes. 
",
  ],
]
`;

exports[`show throw error should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-err 1`] = `Array []`;

exports[`show throw error should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-exit 1`] = `Array []`;

exports[`show throw error should throw out an error: vxSr6uKuGeO4iX7r2j2Uo9SYlXRhz6nf-out 1`] = `
Array [
  Array [
    "◼ This task will fail.  
",
  ],
  Array [
    "[2K[1A[2K[G◼ This task will fail.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G❯ This task will fail.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task will fail.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
◼ This task will never execute.  
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G✖ This task failed after 2 seconds.
◼ This task will never execute. 
",
  ],
]
`;
